// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFromJSON to render a flat entry with a components attribute 1`] = `
<div>
  <div />
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
  <div>
    cheese
  </div>
  <div>
    <div
      id="0"
    >
      <div>
        0
      </div>
      large patty
      <div>
        impossible
      </div>
    </div>
    <div
      id="1"
    >
      <div>
        Order: 1
      </div>
      large patty
      <div>
        beef
      </div>
    </div>
  </div>
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
</div>
`;

exports[`ReactFromJSON to render a recursive entry 1`] = `
<div>
  <div />
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
  <div>
    cheese
  </div>
  <div>
    <div
      id="undefined"
    >
      <div>
        0
      </div>
      large patty
      <div>
        impossible
      </div>
    </div>
    <div
      id="undefined"
    >
      <div>
        Order: 1
      </div>
      large patty
      <div>
        beef
      </div>
    </div>
  </div>
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
</div>
`;

exports[`ReactFromJSON to render a recursive entry with a non-standard shape 1`] = `
<div>
  <div />
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
  <div>
    cheese
  </div>
  <div>
    <div
      id="undefined"
    >
      <div>
        0
      </div>
      large patty
      <div>
        impossible
      </div>
    </div>
    <div
      id="undefined"
    >
      <div>
        Order: 1
      </div>
      large patty
      <div>
        beef
      </div>
    </div>
  </div>
  <div>
    <div>
      <div />
      sesame bun
    </div>
  </div>
</div>
`;
